# crewai-template

./: .coverage  .cursorrules  .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml  report.md  requirements.txt  setup.sh  setup_project.sh
.cursor/rules/: docker-first-development.mdc
crewai_template/: README.md
crewai_template/src/crewai_template/: main.py
docs/plans/: 0005-modernize-to-crewai-1.14.md
examples/: README.md  business_analysis_example.py
examples/flow/: README.md  article_flow.py
knowledge/: README.md  company_brief.txt
src/crewai_template/: __init__.py  crew.py  main.py  observability.py  schemas.py
src/crewai_template/config/: agents.yaml  tasks.yaml
src/crewai_template/tools/: __init__.py  agentclear_tool.py  custom_tool.py  data_analyzer.py  web_scraper.py
tests/: conftest.py  test_crew.py  test_crew_smoke.py  test_guardrails.py  test_tools.py
