[project]
name = "crewai_template"
version = "0.1.0"
description = "crewai_template using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1"
]

[project.scripts]
crewai_template = "crewai_template.main:run"
run_crew = "crewai_template.main:run"
train = "crewai_template.main:train"
replay = "crewai_template.main:replay"
test = "crewai_template.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v --cov=src/crewai_template --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_template"]

[tool.hatch.build.targets.sdist]
packages = ["src/crewai_template"]
