[project]
name = "crewai_template"
version = "0.2.0"
description = "Modern crewAI starter template — agents, tasks, flows, knowledge, memory, guardrails"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14,<2",
    "pydantic>=2.11",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
crewai_template = "crewai_template.main:run"
run_crew = "crewai_template.main:run"
train = "crewai_template.main:train"
replay = "crewai_template.main:replay"
test = "crewai_template.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_template"]

[tool.hatch.build.targets.sdist]
packages = ["src/crewai_template"]

[tool.pytest.ini_options]
markers = [
    "integration: hits a real LLM (gated by RUN_INTEGRATION=1)",
]
